--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -2,38 +2,38 @@
 <resources>
 
     <string name="app_name">Los HIIT Timer</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Ajustes</string>
     <string name="splashScreenText">Furious Logic</string>
     <string name="banner_ad_unit_id">ca-app-pub-1743099204773472/4963325344</string>
-    <string name="stageInitialText">stage</string>
+    <string name="stageInitialText">etapa</string>
     <string name="repText">Rep</string>
-    <string name="warmUpText">Warm up</string>
-    <string name="powerText">Power</string>
-    <string name="restText">Rest</string>
-    <string name="coolDownText">Cool Down</string>
-    <string name="startTimerButtonText">Start Timer</string>
-    <string name="cancelTimerButtonText">Cancel</string>
+    <string name="warmUpText">Calentar</string>
+    <string name="powerText">Energía</string>
+    <string name="restText">Resto</string>
+    <string name="coolDownText">Enfriarse</string>
+    <string name="startTimerButtonText">Comienzo</string>
+    <string name="cancelTimerButtonText">Cancelar</string>
     <string name="hello_world">Hello world!</string>
-    <string name="ic_action_about">About</string>
-    <string name="Name">Name</string>
-    <string name="UserName">User Name</string>
-    <string name="WarmUpTitle">Warm Up (sec)</string>
-    <string name="WarmUpHint">Warm Up (seconds)</string>
-    <string name="PowerTitle">Power (sec)</string>
-    <string name="PowerHint">Power (seconds)</string>
-    <string name="RestTitle">Rest (sec)</string>
-    <string name="RestHint">Rest (seconds)</string>
-    <string name="CoolDownTitle">Cool Down (sec)</string>
-    <string name="CoolDownHint">CoolDown (seconds)</string>
+    <string name="ic_action_about">Acerca de</string>
+    <string name="Name">Nombre</string>
+    <string name="UserName">Nombre de Usuario</string>
+    <string name="WarmUpTitle">Calentar (sec)</string>
+    <string name="WarmUpHint">Calentar (de segundos)</string>
+    <string name="PowerTitle">Energía (sec)</string>
+    <string name="PowerHint">Energía (de segundos)</string>
+    <string name="RestTitle">Resto (sec)</string>
+    <string name="RestHint">Resto (de segundos)</string>
+    <string name="CoolDownTitle">Enfriarse (sec)</string>
+    <string name="CoolDownHint">Enfriarse (de segundos)</string>
     <string name="RepsTitle">Reps</string>
     <string name="RepsHint">Reps</string>
     <string name="TimmonsRegimineButton">Timmons Regimen</string>
     <string name="WingateProtocolButton">Wingate Protocol (tougher)</string>
-    <string name="SaveButton">Save</string>
-    <string name="title_activity_settings">Settings</string>
-    <string name="preferences_title">Preferences</string>
+    <string name="SaveButton">guardar</string>
+    <string name="title_activity_settings">Ajustes</string>
+    <string name="preferences_title">Ajustes</string>
     <string name="splash_contentDescription">FL Logo</string>
-    <string name="athleteName_title">Athlete Name</string>
+    <string name="athleteName_title">nombre del Atleta</string>
     <string name="athleteName_summary">Name will show on main app screen</string>
     <string name="athleteName_dialogue">Enter name</string>
     <string name="category_user">User</string>
