--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -2,30 +2,47 @@
 <resources>
 
     <string name="app_name">HIIT Timer</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Ajustes</string>
     <string name="banner_ad_unit_id">ca-app-pub-1743099204773472/4963325344</string>
-    <string name="startTimerButtonText">Start Timer</string>
-    <string name="cancelTimerButtonText">Cancel</string>
-    <string name="ic_action_about">About</string>
-    <string name="preferences_title">Preferences</string>
+    <string name="startTimerButtonText">comienzo</string>
+    <string name="cancelTimerButtonText">cancelar</string>
+    <string name="ic_action_about">acerca de</string>
+    <string name="preferences_title">Preferencias</string>
     <string name="splash_contentDescription">FL Logo</string>
-    <string name="athleteName_title">Athlete Name</string>
-    <string name="athleteName_summary">Name will show on main app screen</string>
-    <string name="athleteName_dialogue">Enter name</string>
-    <string name="category_user">User</string>
-    <string name="category_workout">Workout</string>
-    <string name="warmUp_title">Warm Up</string>
-    <string name="warmUp_summary">Choose warm up period</string>
-    <string name="power_title">Power</string>
-    <string name="power_summary">Choose power duration</string>
-    <string name="rest_title">Rest</string>
-    <string name="rest_summary">Choose rest period</string>
-    <string name="coolDown_title">Cool Down</string>
-    <string name="coolDown_summary">Choose cool down period</string>
+    <string name="athleteName_title">Atleta Nombre</string>
+    <string name="athleteName_summary">Nombre mostrará en la pantalla principal de la aplicación</string>
+    <string name="athleteName_dialogue">Ingresa</string>
+    <string name="category_user">usuario</string>
+    <string name="category_workout">Rutina De Ejercicio</string>
+    <string name="warmUp_title">calentar</string>
+    <string name="warmUp_summary">Seleccione el período de calentamiento</string>
+    <string name="power_title">energía</string>
+    <string name="power_summary">Seleccione la duración de energía</string>
+    <string name="rest_title">Resto</string>
+    <string name="rest_summary">Elija período de descanso</string>
+    <string name="coolDown_title">enfriarse</string>
+    <string name="coolDown_summary">Elija período de enfriamiento</string>
     <string name="reps_title">Reps</string>
-    <string name="reps_summary">Choose number of reps</string>
-    <string name="Sound_title">Sound</string>
-    <string name="Sound_summary">Warning beeps during workout</string>
-    <string name="Sound_dialog_title">Sounds</string>
+    <string name="reps_summary">Elija el número de repeticiones</string>
+    <string name="Sound_title">Sonidos</string>
+    <string name="Sound_summary">Advertencia emite sonidos durante el entrenamiento</string>
+    <string name="Sound_dialog_title">Sonidos</string>
+    <string name="Time_Since_Last_Workout">Time Since Last Workout</string>
+    <string name="Days">days</string>
+    <string name="hours">hours</string>
+    <string name="minutes">minutes</string>
+    <string name="No_workouts_completed">No workouts completed</string>
+    <string name="Last_Workout">Last Workout</string>
+    <string name="Show_Info_1">"High Intensity Interval Training (HIIT) is an enhanced form of interval training, an exercise strategy "</string>
+    <string name="Show_Info_2">alternating periods of short intense anaerobic exercise with less-intense recovery periods.</string>
+    <string name="Show_Info_3">This app defaults to the Timmons Regimen as covers by BBC Horizon in Feb 2012.  This program involves approximately 21 minutes of exercise a week.</string>
+    <string name="High_Intensity_Interval_Training">High Intensity Interval Training</string>
+    <string name="OK">OK</string>
+    <string name="YAY">YAY</string>
+    <string name="Inactivity">Inactivity</string>
+    <string name="Warm_Up">Warm Up</string>
+    <string name="On">On</string>
+    <string name="Rest">Rest</string>
+    <string name="Cool_Down">Cool Down</string>
 
 </resources>
