Rationalise strings & more Spanish

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,48 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">HIIT Timer</string>
-    <string name="action_settings">Ajustes</string>
-    <string name="banner_ad_unit_id">ca-app-pub-1743099204773472/4963325344</string>
-    <string name="startTimerButtonText">comienzo</string>
-    <string name="cancelTimerButtonText">cancelar</string>
-    <string name="ic_action_about">acerca de</string>
-    <string name="preferences_title">Preferencias</string>
-    <string name="splash_contentDescription">FL Logo</string>
-    <string name="athleteName_title">Atleta Nombre</string>
+    <string name="Preferences">Ajustes</string>
+    <string name="HIIT_Timer">HIIT Timer</string>
+    <string name="Enter_name">Ingresa</string>
     <string name="athleteName_summary">Nombre mostrará en la pantalla principal de la aplicación</string>
-    <string name="athleteName_dialogue">Ingresa</string>
-    <string name="category_user">usuario</string>
-    <string name="category_workout">Rutina De Ejercicio</string>
-    <string name="warmUp_title">calentar</string>
-    <string name="warmUp_summary">Seleccione el período de calentamiento</string>
-    <string name="power_title">energía</string>
-    <string name="power_summary">Seleccione la duración de energía</string>
-    <string name="rest_title">Resto</string>
-    <string name="rest_summary">Elija período de descanso</string>
-    <string name="coolDown_title">enfriarse</string>
+    <string name="Athlete_Name">Atleta Nombre</string>
+    <string name="banner_ad_unit_id">ca-app-pub-1743099204773472/4963325344</string>
+    <string name="Cancel">cancelar</string>
+    <string name="User">usuario</string>
+    <string name="Workout">Rutina De Ejercicio</string>
     <string name="coolDown_summary">Elija período de enfriamiento</string>
-    <string name="reps_title">Reps</string>
-    <string name="reps_summary">Elija el número de repeticiones</string>
-    <string name="Sound_title">Sonidos</string>
-    <string name="Sound_summary">Advertencia emite sonidos durante el entrenamiento</string>
-    <string name="Sound_dialog_title">Sonidos</string>
-    <string name="Time_Since_Last_Workout">Time Since Last Workout</string>
-    <string name="Days">days</string>
+    <string name="Cool_Down">enfriarse</string>
+    <string name="days">days</string>
+    <string name="High_Intensity_Interval_Training">High Intensity Interval Training</string>
     <string name="hours">hours</string>
+    <string name="About">acerca de</string>
+    <string name="Inactivity">Inactivity</string>
+    <string name="Last_Workout">Last Workout</string>
     <string name="minutes">minutes</string>
     <string name="No_workouts_completed">No workouts completed</string>
-    <string name="Last_Workout">Last Workout</string>
+    <string name="OK">OK</string>
+    <string name="On">On</string>
+    <string name="Power_Stage_seconds">Seleccione la duración de energía</string>
+    <string name="Power">energía</string>
+    <string name="Number_of_reps">Elija el número de repeticiones</string>
+    <string name="Reps">Reps</string>
+    <string name="Rest_Stage_seconds">Elija período de descanso</string>
+    <string name="Rest">Resto</string>
     <string name="Show_Info_1">"High Intensity Interval Training (HIIT) is an enhanced form of interval training, an exercise strategy "</string>
     <string name="Show_Info_2">alternating periods of short intense anaerobic exercise with less-intense recovery periods.</string>
     <string name="Show_Info_3">This app defaults to the Timmons Regimen as covers by BBC Horizon in Feb 2012.  This program involves approximately 21 minutes of exercise a week.</string>
-    <string name="High_Intensity_Interval_Training">High Intensity Interval Training</string>
-    <string name="OK">OK</string>
+    <string name="Sounds">Sonidos</string>
+    <string name="Alert_sounds">Advertencia emite sonidos durante el entrenamiento</string>
+    <string name="Sound">Sonidos</string>
+    <string name="FL_Logo">FL Logo</string>
+    <string name="Start_Timer">comienzo</string>
+    <string name="Time_Since_Last_Workout">Time Since Last Workout</string>
+    <string name="Warm_Up_Stage_seconds">Seleccione el período de calentamiento</string>
+    <string name="Warm_Up">calentar</string>
     <string name="YAY">YAY</string>
-    <string name="Inactivity">Inactivity</string>
-    <string name="Warm_Up">Warm Up</string>
-    <string name="On">On</string>
-    <string name="Rest">Rest</string>
-    <string name="Cool_Down">Cool Down</string>
 
 </resources>
