--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,48 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">HIIT Timer</string>
-    <string name="action_settings">Settings</string>
-    <string name="banner_ad_unit_id">ca-app-pub-1743099204773472/4963325344</string>
-    <string name="startTimerButtonText">Start Timer</string>
-    <string name="cancelTimerButtonText">Cancel</string>
-    <string name="ic_action_about">About</string>
-    <string name="preferences_title">Preferences</string>
-    <string name="splash_contentDescription">FL Logo</string>
-    <string name="athleteName_title">Athlete Name</string>
+    <string name="Preferences">Preferences</string>
+    <string name="HIIT_Timer">HIIT Timer</string>
+    <string name="Enter_name">Enter name</string>
     <string name="athleteName_summary">Name will show on main app screen</string>
-    <string name="athleteName_dialogue">Enter name</string>
-    <string name="category_user">User</string>
-    <string name="category_workout">Workout</string>
-    <string name="warmUp_title">Warm Up</string>
-    <string name="warmUp_summary">Choose warm up period</string>
-    <string name="power_title">Power</string>
-    <string name="power_summary">Choose power duration</string>
-    <string name="rest_title">Rest</string>
-    <string name="rest_summary">Choose rest period</string>
-    <string name="coolDown_title">Cool Down</string>
+    <string name="Athlete_Name">Athlete Name</string>
+    <string name="banner_ad_unit_id">ca-app-pub-1743099204773472/4963325344</string>
+    <string name="Cancel">Cancel</string>
+    <string name="User">User</string>
+    <string name="Workout">Workout</string>
+    <string name="Cool_Down">Cool Down</string>
     <string name="coolDown_summary">Choose cool down period</string>
-    <string name="reps_title">Reps</string>
-    <string name="reps_summary">Choose number of reps</string>
-    <string name="Sound_title">Sound</string>
-    <string name="Sound_summary">Warning beeps during workout</string>
-    <string name="Sound_dialog_title">Sounds</string>
-    <string name="Time_Since_Last_Workout">Time Since Last Workout</string>
-    <string name="Days">days</string>
+    <string name="days">days</string>
+    <string name="High_Intensity_Interval_Training">High Intensity Interval Training</string>
     <string name="hours">hours</string>
+    <string name="About">About</string>
+    <string name="Inactivity">Inactivity</string>
+    <string name="Last_Workout">Last Workout</string>
     <string name="minutes">minutes</string>
     <string name="No_workouts_completed">No workouts completed</string>
-    <string name="Last_Workout">Last Workout</string>
+    <string name="OK">OK</string>
+    <string name="On">On</string>
+    <string name="Power_Stage_seconds">Power Stage (seconds)</string>
+    <string name="Power">Power</string>
+    <string name="Number_of_reps">Number of reps</string>
+    <string name="Reps">Reps</string>
+    <string name="Rest">Rest</string>
+    <string name="Rest_Stage_seconds">Rest Stage (seconds)</string>
     <string name="Show_Info_1">"High Intensity Interval Training (HIIT) is an enhanced form of interval training, an exercise strategy "</string>
     <string name="Show_Info_2">alternating periods of short intense anaerobic exercise with less-intense recovery periods.</string>
     <string name="Show_Info_3">This app defaults to the Timmons Regimen as covers by BBC Horizon in Feb 2012.  This program involves approximately 21 minutes of exercise a week.</string>
-    <string name="High_Intensity_Interval_Training">High Intensity Interval Training</string>
-    <string name="OK">OK</string>
-    <string name="YAY">YAY</string>
-    <string name="Inactivity">Inactivity</string>
+    <string name="Sounds">Sounds</string>
+    <string name="Alert_sounds">Alert sounds</string>
+    <string name="Sound">Sound</string>
+    <string name="FL_Logo">FL Logo</string>
+    <string name="Start_Timer">Start Timer</string>
+    <string name="Time_Since_Last_Workout">Time Since Last Workout</string>
     <string name="Warm_Up">Warm Up</string>
-    <string name="On">On</string>
-    <string name="Rest">Rest</string>
-    <string name="Cool_Down">Cool Down</string>
+    <string name="Warm_Up_Stage_seconds">Warm Up Stage (seconds)</string>
+    <string name="YAY">YAY</string>
 
 </resources>
