--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -12,33 +12,33 @@
     <string name="Workout">Rutina De Ejercicio</string>
     <string name="coolDown_summary">Elija período de enfriamiento</string>
     <string name="Cool_Down">enfriarse</string>
-    <string name="days">days</string>
+    <string name="days">día</string>
     <string name="High_Intensity_Interval_Training">High Intensity Interval Training</string>
-    <string name="hours">hours</string>
+    <string name="hours">horas</string>
     <string name="About">acerca de</string>
-    <string name="Inactivity">Inactivity</string>
-    <string name="Last_Workout">Last Workout</string>
-    <string name="minutes">minutes</string>
-    <string name="No_workouts_completed">No workouts completed</string>
+    <string name="Inactivity">Inactividad</string>
+    <string name="minutes">minutos </string>
+    <string name="No_workouts_completed">No hay entrenamientos completados</string>
     <string name="OK">OK</string>
-    <string name="On">On</string>
     <string name="Power_Stage_seconds">Seleccione la duración de energía</string>
-    <string name="Power">energía</string>
+    <string name="Power">Energía</string>
     <string name="Number_of_reps">Elija el número de repeticiones</string>
     <string name="Reps">Reps</string>
     <string name="Rest_Stage_seconds">Elija período de descanso</string>
     <string name="Rest">Resto</string>
-    <string name="Show_Info_1">"High Intensity Interval Training (HIIT) is an enhanced form of interval training, an exercise strategy "</string>
-    <string name="Show_Info_2">alternating periods of short intense anaerobic exercise with less-intense recovery periods.</string>
-    <string name="Show_Info_3">This app defaults to the Timmons Regimen as covers by BBC Horizon in Feb 2012.  This program involves approximately 21 minutes of exercise a week.</string>
+    <string name="Show_Info_1">High Intensity Interval Training (HIIT) es una forma mejorada de entrenamiento de intervalo, una estrategia de ejercicio</string>
+    <string name="Show_Info_2">alternando períodos de ejercicio anaeróbico intenso corto con períodos de recuperación menos intensos.</string>
+    <string name="Show_Info_3">Esta aplicación por defecto el Timmons Regimen como cubiertas por Horizon de la BBC en febrero de 2012. Este programa implica aproximadamente 21 minutos de ejercicio a la semana.</string>
     <string name="Sounds">Sonidos</string>
     <string name="Alert_sounds">Advertencia emite sonidos durante el entrenamiento</string>
     <string name="Sound">Sonidos</string>
     <string name="FL_Logo">FL Logo</string>
     <string name="Start_Timer">comienzo</string>
-    <string name="Time_Since_Last_Workout">Time Since Last Workout</string>
+    <string name="Time_Since_Last_Workout">Tiempo desde el último entrenamiento</string>
     <string name="Warm_Up_Stage_seconds">Seleccione el período de calentamiento</string>
     <string name="Warm_Up">calentar</string>
-    <string name="YAY">YAY</string>
+    <string name="YAY">:)</string>
+    <string name="Last_Workout">Último entrenamiento</string>
+    <string name="Your_Name">Su Nombre</string>
 
 </resources>
